--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ a {
 }
 
 .section1 p {
-  font-size: 10px;
+  font-size: 12px;
   font-weight: 300;
   line-height: 20px;
   letter-spacing: 1px;
@@ -246,4 +246,59 @@ input[type="range"] {
   box-shadow: 0 28px 28px rgba(0, 0, 0, 0.2);
   margin: auto;
   color: #fff;
+}
+
+.list-box {
+  width: 30vw;
+  height: 10vh;
+  top: 90%;
+  left: 30%;
+  position: absolute;
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  transform: translate(-50%, -50%);
+  background: #ffffff00;
+  border-radius: 25px;
+  border: 1px solid #fff;
+  box-shadow: 10px 10px 25px #00000044, -10px -10px 25px #00000044;
+  display: flex;
+}
+
+.list-box .segment-logo {
+  position: relative;
+  display: flex;
+  color: #fff;
+}
+
+.list-box p {
+  position: relative;
+  top: 40%;
+  left: 5%;
+  color: #fff;
+  width: 300px;
+
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.list-box .pdf-file img {
+  position: relative;
+  display: flex;
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  top: 35%;
+  left: 140%
+}
+
+.list-box .audio-file img {
+  position: relative;
+  display: flex;
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  top: 35%;
+  left: 200%;
 }
