--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ body {
 .header ul {
   display: flex;
   position: absolute;
-  right: 30px;
+  left: 150px;
 }
 
 .header ul li {
@@ -89,208 +89,90 @@ body {
   letter-spacing: 1px;
 }
 
-.github_btn {
-  background-color: #000;
-  border-radius: 50px;
-  box-shadow: 6px 6px 15px #0000002b;
-}
 a {
   color: inherit;
   text-decoration:none;
 }
 
-.section1 {
+.graphArea {
   position: absolute;
-  top: 150px;
-  left: 70px;
   color: #fff;
-  width: 500px;
-}
-
-.section1 h2 {
-  font-size: 30px;
-}
-
-.section1 span {
-  text-transform: uppercase;
-  font-size: 12px;
-  font-weight: 500;
-  letter-spacing: 1px;
-}
-
-.section1 p {
-  font-size: 12px;
-  font-weight: 300;
-  line-height: 20px;
-  letter-spacing: 1px;
-}
-
-.section2 {
-  position: absolute;
-  top: 100px;
-  right: 140px;
-  width: 600px;
-}
-
-button {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
-input[type="range"] {
-  height: 5px;
-  -webkit-appearance: none;
   width: 100%;
-  margin-bottom: 10px;
+  height: 100%;
+  z-index: -1;
+}
+
+
+.button {
+  display: inline-block;
+  padding: 12px 16px;
+  background-color: #B741EE;
+  color: #FFF;
+  text-decoration: none;
+  margin: 30px 8px;
+  text-transform: uppercase;
   border-radius: 8px;
-  background: #3b7677;
-  transition: background 0.2s ease;
-  cursor: pointer;
-}
-
-.audio-player {
-  max-width: 350px;
-  padding: 24px;
-  border-radius: 20px;
-  box-shadow: 0 28px 28px rgba(0, 0, 0, 0.2);
-  margin: auto;
-  color: var(--white);
-}
-
-.artwork {
-  border-radius: 120px;
-  display: block;
-  margin: auto;
-  height: 200px;
-  width: 200px;
-}
-
-.track-info {
-  text-align: center;
-  z-index: 1;
-  position: relative;
-}
-
-.title {
   font-weight: 700;
-  margin-bottom: 4px;
-  color: #fff;
 }
 
-.artist {
-  font-weight: 300;
-  margin-top: 0;
-  color: #fff;
-}
+.popup {
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.4s;
 
-.audio-controls {
-  display: flex;
-  justify-content: space-between;
-  width: 75%;
-  margin: 0 auto 15px;
-}
-
-.audio-controls .prev svg,
-.audio-controls .next svg {
-  width: 35px;
-  height: 35px;
-}
-
-.audio-controls .play svg,
-.audio-controls .pause svg {
-  height: 40px;
-  width: 40px;
-}
-
-.audio-controls path {
-  fill: var(--white);
-}
-
-.color-backdrop {
-  background: linear-gradient(45deg, var(--active-color) 20%, transparent 100%)
-  no-repeat;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: -1;
-}
+  z-index: 99;
+  background-color: rgba(0, 0, 0, 0.2);
 
-.color-backdrop.playing {
-  animation: colorChange 20s alternate infinite;
-}
-
-@keyframes colorChange {
-  from {
-    filter: hue-rotate(0deg);
-  }
-  to {
-    filter: hue-rotate(360deg);
-  }
-}
-
-.text-box {
-  width: 700px;
-  padding: 24px;
-  border-radius: 20px;
-  box-shadow: 0 28px 28px rgba(0, 0, 0, 0.2);
-  margin: auto;
-  color: #fff;
-}
-
-.list-box {
-  width: 30vw;
-  height: 10vh;
-  top: 90%;
-  left: 30%;
-  position: absolute;
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
-  transform: translate(-50%, -50%);
-  background: #ffffff00;
-  border-radius: 25px;
-  border: 1px solid #fff;
-  box-shadow: 10px 10px 25px #00000044, -10px -10px 25px #00000044;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
 }
 
-.list-box .segment-logo {
-  position: relative;
-  display: flex;
-  color: #fff;
+.popup-inner {
+  background-color: #FFF;
+  padding: 32px 16px;
+  max-width: 768px;
+  border-radius: 16px;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
 }
 
-.list-box p {
-  position: relative;
-  top: 40%;
-  left: 5%;
-  color: #fff;
-  width: 300px;
-
-  text-transform: uppercase;
-  font-size: 12px;
-  font-weight: 500;
-  letter-spacing: 1px;
+.popup-inner h3 {
+  color: #666;
+  font-size: 24px;
+  margin-bottom: 16px;
 }
 
-.list-box .pdf-file img {
-  position: relative;
-  display: flex;
-  color: #fff;
-  width: 30px;
-  height: 30px;
-  top: 35%;
-  left: 140%
+.popup-inner p {
+  color: #888;
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 16px;
 }
 
-.list-box .audio-file img {
-  position: relative;
-  display: flex;
-  color: #fff;
-  width: 30px;
-  height: 30px;
-  top: 35%;
-  left: 200%;
+.popup:target {
+  opacity: 1;
+  pointer-events: all;
+}
+
+
+input[type=text]{
+  width:100%;
+  border:2px solid #aaa;
+  border-radius:4px;
+  margin:8px 0;
+  outline:none;
+  padding:8px;
+  box-sizing:border-box;
+  transition:.3s;
+}
+
+input[type=text]:focus{
+  border-color:dodgerBlue;
+  box-shadow:0 0 8px 0 dodgerBlue;
 }
